[gd_scene load_steps=10 format=3 uid="uid://decbdtwcw4rhb"]

[ext_resource type="Script" path="res://dreamlands/path-of-saints/saint.gd" id="1_1ljgr"]
[ext_resource type="Texture2D" uid="uid://cbvbjp5tgtp4e" path="res://dreamlands/path-of-saints/saints-path.png" id="2_hw8sn"]
[ext_resource type="Script" path="res://navdi4/main/navdisheetsprite.gd" id="3_0j8dj"]
[ext_resource type="Resource" uid="uid://b5cvmpbkvv4hf" path="res://dreamlands/path-of-saints/saints-path_sheet.tres" id="4_xj7sb"]
[ext_resource type="Script" path="res://navdi4/main/navdibodymover.gd" id="5_qif7l"]
[ext_resource type="FontFile" uid="uid://depgdmj80k21a" path="res://navdi4/fonts/roughyFIVEbySIX.ttf" id="6_uyegx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rig60"]
size = Vector2(7.9, 7.9)

[sub_resource type="FontVariation" id="FontVariation_sucvl"]
base_font = ExtResource("6_uyegx")
spacing_top = -2
spacing_bottom = -2

[sub_resource type="LabelSettings" id="LabelSettings_xifo4"]
font = SubResource("FontVariation_sucvl")
font_size = 8
font_color = Color(0.0156863, 0.0156863, 0.0666667, 1)

[node name="skinned_saint" type="Node2D"]
position = Vector2(95, -16)
script = ExtResource("1_1ljgr")
skinned = true
replaces_player_if_different = true

[node name="SheetSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_hw8sn")
hframes = 10
vframes = 10
frame = 6
script = ExtResource("3_0j8dj")
sheet = ExtResource("4_xj7sb")
frames = PackedInt32Array(6)

[node name="skinless" type="Sprite2D" parent="."]
texture = ExtResource("2_hw8sn")
hframes = 10
vframes = 10
script = ExtResource("3_0j8dj")
sheet = ExtResource("4_xj7sb")
frames = PackedInt32Array(0)

[node name="mover" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("5_qif7l")

[node name="cast" type="ShapeCast2D" parent="mover"]
shape = SubResource("RectangleShape2D_rig60")
target_position = Vector2(0, 0)

[node name="hang_ray" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(10, 0)

[node name="hang_ray2" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(10, 0)

[node name="score" type="Label" parent="."]
texture_filter = 1
offset_left = -26.0
offset_top = -17.0
offset_right = 28.0
offset_bottom = 2.0
text = "1000
20"
label_settings = SubResource("LabelSettings_xifo4")
horizontal_alignment = 1
visible_characters_behavior = 1
